--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Welcome</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit dolorum officia earum, iure quasi ipsam natus a tempore velit quibusdam. Obcaecati qui laborum inventore expedita.</p>
+    <footer>
+        <p>Lorem ipsum dolor sit amet. &copy;</p>
+    </footer>
 </body>
 </html>
